--- a/frontend/templates/auth_app/attendance.html
+++ b/frontend/templates/auth_app/attendance.html
@@ -33,16 +33,12 @@
 
 <h1>Face Attendance System</h1>
 
-<!-- كاميرا -->
 <video id="camera" autoplay playsinline></video>
 
-<!-- حالة النظام -->
 <div id="status">⏳ Waiting for camera...</div>
 
 <script>
-// ---------------------------------------------
-// الحصول على CSRF Token
-// ---------------------------------------------
+
 function getCookie(name) {
     let cookieValue = null;
     const cookies = document.cookie ? document.cookie.split(';') : [];
@@ -62,24 +58,20 @@ const csrftoken = getCookie('csrftoken');
 const video = document.getElementById("camera");
 const status = document.getElementById("status");
 
-// ---------------------------------------------
-// تشغيل الكاميرا
-// ---------------------------------------------
+
 async function startCamera() {
     try {
         const stream = await navigator.mediaDevices.getUserMedia({ video: true });
         video.srcObject = stream;
-        status.innerHTML = "🎥 Camera Active - Scanning...";
+        status.innerHTML = " Camera Active - Scanning...";
     } catch (error) {
-        status.innerHTML = "⚠ Unable to access camera!";
+        status.innerHTML = " Unable to access camera!";
     }
 }
 
 startCamera();
 
-// ---------------------------------------------
-// التقاط صورة من الفيديو
-// ---------------------------------------------
+
 function captureFrame() {
     const canvas = document.createElement("canvas");
     canvas.width = video.videoWidth;
@@ -91,9 +83,7 @@ function captureFrame() {
     return canvas.toDataURL("image/jpeg");
 }
 
-// ---------------------------------------------
-// إرسال الصورة إلى Django للتعرف على الوجه
-// ---------------------------------------------
+
 async function scanFace() {
     const video = document.getElementById("camera");
     const canvas = document.createElement("canvas");
@@ -135,8 +125,7 @@ async function scanFace() {
     }
 }
 
-// تشغيل التعرف كل 2 ثانية
-setInterval(scanFace, 2000);
+
 </script>
 
 </body>
